# food-sustainability-app

./: README.md  pyproject.toml
src/: app.py  fetch_data.py
src/data/: Luke_Maa_Ravtase_03_20250413-163420.csv  greenhouse-gas-emissions-per-kilogram-of-food-product.csv  greenhouse-gas-emissions-per-kilogram-of-food.csv
